# rustcraft

./: .gitignore  Cargo.toml  LICENSE  README.md  Rustcraft.exe.manifest  build.rs  config.json
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml  release.yml
scripts/: RustCraft Installation Script x64.iss  RustCraft Installation Script x86.iss
src/: assets.rs  config.rs  file_operations.rs  main.rs  notification.rs
src/styling/: _general_styles.rs  button_styles.rs  slider_styles.rs
