[package]
name = "rustcraft"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
iced = { version = "0.4", features = ["image", "smol"] }
image = "0.23"
rfd = "0.14.1"
dirs = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.38"
winapi = { version = "0.3", features = ["winuser"] }
notify-rust = "4"
