[package]
name = "rustcraft"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
iced = { version = "0.12.1", features = ["image", "smol"] }
image = "0.23"
rfd = "0.14.1"
dirs = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.38"
winapi = { version = "0.3", features = ["winuser","consoleapi"] }
notify-rust = "4"
rust-embed = "8.4.0"
tempfile = "3.10.1"

# Adjust compiler behavior for Windows.
[package.metadata.cargo-make]
windows = [
    "set RUSTFLAGS=-C link-args=/SUBSYSTEM:WINDOWS", # Use Windows GUI subsystem.
]

[[bin]]
name = "rustcraft"
path = "src/main.rs"
test = false # No test harness.
doc = false # No documentation.

[build-dependencies]
winresource = "0.1.17"
